# Typeracer-bot

./: pyproject.toml
typeracer/: myracer.py
