[tool.poetry]
name = "typeracer"
version = "0.1.0"
description = ""
authors = ["Prakash Prajapati <paxprajapati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
